--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.password=root123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.sql.init.mode=always
-spring.sql.init.platform=postgres
-spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
+# spring.sql.init.platform=postgres
+# spring.jpa.defer-datasource-initialization=true
