--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
-version: "3.8"
 
 services:
   app:
     build: .
+    container_name: student-service
     ports:
-        - "8080:8080"
+      - "8080:8080"
     networks:
       - s-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/student_db
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root123
+    restart: always
+
   postgres:
-    image: postgres:latest
+    image: postgres:15
+    container_name: student-db
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root123
@@ -19,10 +29,16 @@ services:
       - s-network
     volumes:
       - postgres-s-data:/var/lib/postgresql/data
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root -d student_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   s-network:
     driver: bridge
 
 volumes:
-    postgres-s-data:
+  postgres-s-data:
