--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 server.port=8080
-
 spring.application.name=students-service
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/student_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/student_db
 spring.datasource.username=root
 spring.datasource.password=root123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.data-source-properties.currentSchema=public
+spring.datasource.hikari.data-source-properties.serverTimezone=Asia/Kolkata
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-# spring.sql.init.mode=always
-# spring.sql.init.platform=postgres
-# spring.jpa.defer-datasource-initialization=true
+
+spring.jackson.time-zone=Asia/Kolkata
